--- a/events/src/app/nav-bar/nav-bar.component.html
+++ b/events/src/app/nav-bar/nav-bar.component.html
@@ -1,5 +1,6 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand" href="#">Navbar</a>
+<nav class="navbar navbar-expand-lg navBar">
+  <div class="container">
+  <a class="navbar-brand navItemLogo" href="#">DanielBook</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -7,17 +8,23 @@
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item active">
-        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
       </li>
     </ul>
     <ul class="navbar-nav">
-      <li class="nav-item active">
-        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+      <li class="nav-item">
+          <a class="nav-link navItem" href="#">NEW YORK + </a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">LOG IN</a>
+            <a class="nav-link navItem" href="#">REASOURCES</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link navItem" href="#">LOG IN</a>
+      </li>
+      <li class="nav-item">
+          <a class="nav-link navItem" href="#">LIST YOUR VENUE</a>
       </li>
     </ul>
    
   </div>
+</div>
 </nav>
