--- a/events/src/app/home/home.component.html
+++ b/events/src/app/home/home.component.html
@@ -1,3 +1,13 @@
-<div >
-
+<div class="parallax" >
+    <div class="home_header">
+        <h1 class="home_header_title">Events made easy</h1>
+        <h2 class="home_header_subtitle">Right space. Right time. Book online.</h2>
+        
+        
+            <input matInput [matDatepicker]="picker" placeholder="Choose a date">
+            <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+            <mat-datepicker #picker></mat-datepicker>
+          
+    
+        </div>
 </div>
