--- a/events/src/app/home/home.component.html
+++ b/events/src/app/home/home.component.html
@@ -2,12 +2,50 @@
     <div class="home_header">
         <h1 class="home_header_title">Events made easy</h1>
         <h2 class="home_header_subtitle">Right space. Right time. Book online.</h2>
-        
-        
-            <input matInput [matDatepicker]="picker" placeholder="Choose a date">
-            <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
-            <mat-datepicker #picker></mat-datepicker>
-          
-    
+        <app-search-panel></app-search-panel>  
+    </div>
+</div>
+<div class="container">
+    <div class="row feature_header">
+        <div class="col-6"><h2 class="featuredVenuesTitle">Featured venues</h2></div>
+        <div class="col-6"><span class="seeMore">see all venues ></span></div>
+    </div> 
+    <div class="row">
+        <div class="col-4">
+                <div class="card" style="width: 20rem;">
+                        <div style="background-image: url('../../assets/nick.jpg');
+                        background-position: center;
+                        background-repeat: no-repeat;
+                        background-size: cover;
+                        height: 200px; "></div>
+                        <div class="card-body">
+                          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                        </div>
+                </div>
         </div>
+        <div class="col-4">
+                <div class="card" style="width: 20rem;">
+                        <div style="background-image: url('../../assets/irina.jpg');
+                        background-position: center;
+                        background-repeat: no-repeat;
+                        background-size: cover;
+                        height: 200px; "> </div>
+                        <div class="card-body">
+                          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                        </div>
+                      </div>
+        </div>
+        <div class="col-4">
+                <div class="card" style="width: 20rem;">
+                        <div style="background-image: url('../../assets/create.jpg');
+                        background-position: center;
+                        background-repeat: no-repeat;
+                        background-size: cover;
+                        height: 200px; "></div>
+                        <div class="card-body">
+                          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                        </div>
+                </div>
+        </div>
+    </div>   
 </div>
