--- a/events/src/app/search-panel/search-panel.component.css
+++ b/events/src/app/search-panel/search-panel.component.css
@@ -1,10 +1,15 @@
 
-
-
-
-
 .header_button {
     width: 200px;
     height: 50px;
+}
+.header_search {
+    background: #23c6a1;
+    font-weight: 800;
+    color:white;
+    width: 200px;
+    height: 50px;
+    font-family: Avenir;
+    border-color: #23c6a1;
 }
 
