--- a/events/src/app/search-panel/search-panel.component.html
+++ b/events/src/app/search-panel/search-panel.component.html
@@ -1,7 +1,7 @@
 <div style="margin-top: 50px" class="row">
-    <div class="col-3">
+    <div class="col-4">
         <input matInput class="header_button" [matDatepicker]="picker" placeholder="Choose a date">
-        <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+        <mat-datepicker-toggle style="color:white;" matSuffix [for]="picker"></mat-datepicker-toggle>
         <mat-datepicker #picker></mat-datepicker> 
     </div>
     <div class="col-3">
@@ -18,11 +18,7 @@
               <button mat-menu-item>Item 2</button>
             </mat-menu>
     </div>
-    <div class="col-3">
-            <button mat-button  class="header_button" [matMenuTriggerFor]="menu">Search</button>
-            <mat-menu #menu="matMenu">
-              <button mat-menu-item>Item 1</button>
-              <button mat-menu-item>Item 2</button>
-            </mat-menu>
+    <div class="col-2">
+            <button mat-button  class="header_search" >Search</button>
     </div>
 </div>
