--- a/events/src/app/nav-bar/nav-bar.component.html
+++ b/events/src/app/nav-bar/nav-bar.component.html
@@ -12,7 +12,7 @@
     </ul>
     <ul class="navbar-nav">
       <li class="nav-item">
-          <a class="nav-link navItem" href="#">NEW YORK + </a>
+          <a class="nav-link navItem" href="#">NEW YORK ++ </a>
       </li>
       <li class="nav-item">
             <a class="nav-link navItem" href="#">REASOURCES</a>
