--- a/events/src/app/search-panel/search-panel.component.html
+++ b/events/src/app/search-panel/search-panel.component.html
@@ -5,14 +5,14 @@
         <mat-datepicker #picker></mat-datepicker> 
     </div>
     <div class="col-3">
-        <button mat-button class="header_button" [matMenuTriggerFor]="menu">date</button>
+        <button mat-button class="header_button" [matMenuTriggerFor]="menu">guests</button>
         <mat-menu #menu="matMenu">
           <button mat-menu-item>Item 1</button>
           <button mat-menu-item>Item 2</button>
         </mat-menu>
     </div>
     <div class="col-3">
-            <button mat-button  class="header_button" [matMenuTriggerFor]="menu">guest</button>
+            <button mat-button  class="header_button" [matMenuTriggerFor]="menu">location</button>
             <mat-menu #menu="matMenu">
               <button mat-menu-item>Item 1</button>
               <button mat-menu-item>Item 2</button>
