--- a/events/src/app/home/home.component.html
+++ b/events/src/app/home/home.component.html
@@ -1,6 +1,6 @@
 <div class="parallax" >
     <div class="home_header">
-        <h1 class="home_header_title">Events made easy</h1>
+        <h1 class="home_header_title">Event management. Simplified.</h1>
         <h2 class="home_header_subtitle">We fill your seats. You fill your coffers.</h2>
         <app-search-panel></app-search-panel>  
     </div>
