udpated featured venue images

--- a/events/src/app/featured-venues/featured-venues.component.html
+++ b/events/src/app/featured-venues/featured-venues.component.html
@@ -5,7 +5,7 @@
 <div class="row">
     <div class="col-4">
             <div class="card" style="width: 20rem;">
-                    <div style="background-image: url('../../assets/nick.jpg');
+                    <div style="background-image: url('https://static1.squarespace.com/static/5639ae74e4b0938162bc0540/565c8c4ee4b0f33a7ae9ac84/565c8d62e4b0fad364fe179b/1448907726550/10_03_10+Verdini+Fiorino+C1+2.jpg?format=2500w');
                     background-position: center;
                     background-repeat: no-repeat;
                     background-size: cover;
@@ -17,7 +17,7 @@
     </div>
     <div class="col-4">
             <div class="card" style="width: 20rem;">
-                    <div style="background-image: url('../../assets/irina.jpg');
+                    <div style="background-image: url('http://ovationsrestaurant.com/sites/sow/files/gallery/DSC_0025.jpg');
                     background-position: center;
                     background-repeat: no-repeat;
                     background-size: cover;
