added footer styling

--- a/events/src/app/login/login.component.html
+++ b/events/src/app/login/login.component.html
@@ -1,8 +1,7 @@
-<div class="bg-dark" style="height: 100%">
+<div class="bg-dark" style="height: 600px">
 <div class="container py-5">
   <div class="row">
       <div class="col-md-12">
-          <h2 class="text-center text-white mb-4">Bootstrap 4 Login Form</h2>
           <div class="row">
               <div class="col-md-6 mx-auto">
                   <span class="anchor" id="formLogin"></span>
@@ -29,6 +28,8 @@
                                     <span class="custom-control-description small">Remember me on this computer</span>
                                   </label>
                               </div>
+                              <a href="" >Register </a>
+                    
                               <button type="button" class="btn btn-success btn-lg float-right">Login</button>
                           </form>
                       </div>
