--- a/events/src/app/featured-venues/featured-venues.component.html
+++ b/events/src/app/featured-venues/featured-venues.component.html
@@ -1,8 +1,8 @@
-<div class="row feature_header">
+<div class="row feature_header" >
     <div class="col-6"><h2 class="featuredVenuesTitle">Featured venues</h2></div>
     <div class="col-6"><span class="seeMore">see all venues ></span></div>
 </div> 
-<div class="row">
+<div class="row" style="margin-bottom: 50px;">
     <div class="col-4">
             <div class="card" style="width: 20rem;">
                     <div style="background-image: url('../../assets/nick.jpg');
