--- a/events/src/app/home/home.component.html
+++ b/events/src/app/home/home.component.html
@@ -1,10 +1,18 @@
-<div class="parallax" >
-    <div class="home_header">
-        <h1 class="home_header_title">Events made easy</h1>
-        <h2 class="home_header_subtitle">Right space. Right time. Book online.</h2>
-        <app-search-panel></app-search-panel>  
+<div class="row">
+    <div class="col-12">
+        <div class="parallax" >
+            <div class="home_header">
+                <h1 class="home_header_title">Events made easy</h1>
+                <h2 class="home_header_subtitle">Right space. Right time. Book online.</h2>
+                <app-search-panel></app-search-panel>  
+            </div>
+        </div>
     </div>
 </div>
-<div class="container" style="margin-bottom: 100px">
-    <app-featured-venues></app-featured-venues> 
+<div class="row">
+    <div class="col-12">
+            <div class="container" >
+                <app-featured-venues></app-featured-venues> 
+            </div>
+    </div>
 </div>
