--- a/events/src/app/app.component.html
+++ b/events/src/app/app.component.html
@@ -1,7 +1,9 @@
+<div [ngStyle]="{'min-height': clientHeight + 'px', 'margin-bottom': '-100px'}">
+    
+    <app-nav-bar></app-nav-bar>
+    <router-outlet></router-outlet>
+    <div style="height: 100px"></div> 
 
-<app-nav-bar></app-nav-bar>
-
-<router-outlet></router-outlet>
-
+</div>
 <app-footer></app-footer>
 
