--- a/events/src/app/featured-venues/featured-venues.component.html
+++ b/events/src/app/featured-venues/featured-venues.component.html
@@ -11,7 +11,7 @@
                     background-size: cover;
                     height: 200px; "></div>
                     <div class="card-body">
-                      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                      <p class="card-text">Whether you’re in search of a private space for a business function, family event, or just a special dinner out with friends, Fiorino has the right solution for your private dining needs.</p>
                     </div>
             </div>
     </div>
