set up personal login

--- a/events/src/app/login/login.component.html
+++ b/events/src/app/login/login.component.html
@@ -28,7 +28,7 @@
                                     <span class="custom-control-description small">Remember me on this computer</span>
                                   </label>
                               </div>
-                              <a class="nav-link navItem" routerLink ="/register" >LOG IN</a>
+                              <a class="nav-link navItem" routerLink ="/register" >REGISTER</a>
                               
                     
                               <button type="button" class="btn btn-success btn-lg float-right">Login</button>
