--- a/events/src/styles.css
+++ b/events/src/styles.css
@@ -2,6 +2,6 @@
 @import "~bootstrap/dist/css/bootstrap.css";
 @import "~@angular/material/prebuilt-themes/indigo-pink.css";
 
-body { 
+body,html { 
     height: 100%;
 } 
