--- a/events/src/app/register/user-type/personal/personal.component.html
+++ b/events/src/app/register/user-type/personal/personal.component.html
@@ -1,3 +1,30 @@
-<p>
-  personal works!
-</p>
+<div  class="bg-dark">
+    <div class="container form_container">
+        <form>
+            <div class="form-group">
+              <label for="formGroupExampleInput">First Name</label>
+              <input type="text" class="form-control" id="formGroupExampleInput" placeholder="Parker">
+            </div>
+            <div class="form-group">
+              <label for="formGroupExampleInput2">Last Name</label>
+              <input type="text" class="form-control" id="formGroupExampleInput2" placeholder="Martinez">
+            </div>
+            <div class="form-group">
+                <label for="formGroupExampleInput2">Street</label>
+                <input type="text" class="form-control" id="formGroupExampleInput2" placeholder="12 Mackenzie rd">
+            </div>
+            <div class="form-group">
+                <label for="formGroupExampleInput2">City</label>
+                <input type="text" class="form-control" id="formGroupExampleInput2" placeholder="Morristown">
+            </div>
+            <div class="form-group">
+                <label for="formGroupExampleInput2">Zip</label>
+                <input type="text" class="form-control" id="formGroupExampleInput2" placeholder="07981">
+            </div>
+            <div class="form-group">
+                <label for="formGroupExampleInput2">Email</label>
+                <input type="text" class="form-control" id="formGroupExampleInput2" placeholder="dan@parker.com">
+            </div>
+          </form>    
+    </div> 
+</div>
