--- a/events/src/app/register/user-type/personal/personal.component.css
+++ b/events/src/app/register/user-type/personal/personal.component.css
@@ -1,11 +1,17 @@
 .form_container {
-    height: 90vh;
+    height: 100%;
     width: 60%;
     display: flex;
     flex-direction: column;
     justify-content: center;
+    overflow: scroll;
+   
 }
 .form_container label {
     color: white;
     font-family: Avenir;
+}
+.personal_form {
+    margin-top: 50px;
+    margin-bottom: 50px;
 }
