--- a/events/src/app/register/user-type/personal/personal.component.html
+++ b/events/src/app/register/user-type/personal/personal.component.html
@@ -1,6 +1,6 @@
 <div  class="bg-dark">
     <div class="container form_container">
-        <form>
+        <form class="personal_form">
             <div class="form-group">
               <label for="formGroupExampleInput">First Name</label>
               <input type="text" class="form-control" id="formGroupExampleInput" placeholder="Parker">
@@ -22,9 +22,23 @@
                 <input type="text" class="form-control" id="formGroupExampleInput2" placeholder="07981">
             </div>
             <div class="form-group">
+                <label for="formGroupExampleInput2">Mobile</label>
+                <input type="text" class="form-control" id="formGroupExampleInput2" placeholder="12 Mackenzie rd">
+            </div>
+            <div class="form-group">
                 <label for="formGroupExampleInput2">Email</label>
                 <input type="text" class="form-control" id="formGroupExampleInput2" placeholder="dan@parker.com">
             </div>
-          </form>    
+            <div class="form-group">
+                <label for="formGroupExampleInput2">Password</label>
+                <input type="text" class="form-control" id="formGroupExampleInput2" placeholder="dan@parker.com">
+            </div>
+            <div class="form-group">
+                <label for="formGroupExampleInput2">Re-enter Password</label>
+                <input type="text" class="form-control" id="formGroupExampleInput2" placeholder="dan@parker.com">
+            </div>
+            <button>Submit</button>
+          </form>
+              
     </div> 
 </div>
