updated featured venue

--- a/events/src/app/featured-venues/featured-venues.component.html
+++ b/events/src/app/featured-venues/featured-venues.component.html
@@ -5,13 +5,13 @@
 <div class="row" style="margin-bottom: 50px;">
     <div class="col-4">
             <div class="card" style="width: 20rem;">
-                    <div style="background-image: url('../../assets/nick.jpg');
+                    <div style="background-image: url('https://static1.squarespace.com/static/5639ae74e4b0938162bc0540/565c8c4ee4b0f33a7ae9ac84/565c8c4fe4b0f33a7ae9ac88/1448906304945/WineRoom01.jpg?format=750w');
                     background-position: center;
                     background-repeat: no-repeat;
                     background-size: cover;
                     height: 200px; "></div>
                     <div class="card-body">
-                      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                      <p class="card-text">Whether you’re in search of a private space for a business function, family event, or just a special dinner out with friends, we have the right solution for your private dining needs.</p>
                     </div>
             </div>
     </div>
