updated featured venues

--- a/events/src/app/featured-venues/featured-venues.component.html
+++ b/events/src/app/featured-venues/featured-venues.component.html
@@ -11,31 +11,31 @@
                     background-size: cover;
                     height: 200px; "></div>
                     <div class="card-body">
-                      <p class="card-text">Whether you’re in search of a private space for a business function, family event, or just a special dinner out with friends, we have the right solution for your private dining needs.</p>
+                      <p class="card-text">Whether you’re in search of a private space for a business function, family event, or just a special dinner out with friends, Fiorino has the right solution for your private dining needs.</p>
                     </div>
             </div>
     </div>
     <div class="col-4">
             <div class="card" style="width: 20rem;">
-                    <div style="background-image: url('../../assets/irina.jpg');
+                    <div style="background-image: url('http://ovationsrestaurant.com/sites/sow/files/gallery/DSC_0025.jpg');
                     background-position: center;
                     background-repeat: no-repeat;
                     background-size: cover;
                     height: 200px; "> </div>
                     <div class="card-body">
-                      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                      <p class="card-text">In the heart of South Bound Brook, Ovations serves a unique culinary fusion featuring sumptuous Asian and Italian cuisines in its relaxing and friendly eatery.</p>
                     </div>
                   </div>
     </div>
     <div class="col-4">
             <div class="card" style="width: 20rem;">
-                    <div style="background-image: url('../../assets/create.jpg');
+                    <div style="background-image: url('https://resizer.otstatic.com/v2/photos/large/25113824.jpg');
                     background-position: center;
                     background-repeat: no-repeat;
                     background-size: cover;
                     height: 200px; "></div>
                     <div class="card-body">
-                      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                      <p class="card-text">Summit House offers elegant cuisine inspired by the Garden State's diverse edible bounty -- served in a warm, community-focused atmosphere. </p>
                     </div>
             </div>
     </div>
