--- a/events/src/app/login/login.component.html
+++ b/events/src/app/login/login.component.html
@@ -33,8 +33,10 @@
                     
                               <button type="button" class="btn btn-success btn-lg float-right">Login</button>
                           </form>
+                          
                       </div>
                       <!--/card-block-->
+                      <button class="google_login" (click)="googleLogin()"> Google + </button>
                   </div>
                   <!-- /form card login -->
 
