--- a/events/src/app/home/home.component.css
+++ b/events/src/app/home/home.component.css
@@ -7,7 +7,7 @@
 
     /* Create the parallax scrolling effect */
     background-attachment: fixed;
-    background-position: center bottom;
+    background-position: 50% 155%;
     background-repeat: no-repeat;
     background-size: cover;
 }
