google auth cont

--- a/events/src/app/login/login.component.html
+++ b/events/src/app/login/login.component.html
@@ -36,7 +36,7 @@
                           
                       </div>
                       <!--/card-block-->
-                      <button class="google_login" (click)="googleLogin()"> Google + </button>
+                      <a class="google_login" href="/auth/google"> Google + </a>
                   </div>
                   <!-- /form card login -->
 
