--- a/events/src/app/nav-bar/nav-bar.component.html
+++ b/events/src/app/nav-bar/nav-bar.component.html
@@ -17,7 +17,13 @@
       <li class="nav-item">
             <a class="nav-link navItem" href="localhost:api/test">REASOURCES</a>
       </li>
-      <li class="nav-item">
+      <ng-template #logout>
+        <li>
+          <a class="nav-link navItem" href="/auth/logout" >LOG OUT</a>
+        </li>
+      </ng-template>
+    
+      <li class="nav-item" *ngIf="!isLogged; else logout">
         <a class="nav-link navItem" routerLink ="/login" >LOG IN</a>
       </li>
       <li class="nav-item">
