added linked in log in

--- a/events/src/app/login/login.component.html
+++ b/events/src/app/login/login.component.html
@@ -37,6 +37,8 @@
                       </div>
                       <!--/card-block-->
                       <a class="google_login" href="/auth/google"> Google + </a>
+                      <a class="google_login" href="/auth/facebook"> Facebook + </a>
+                      <a class="google_login" href="/auth/linkedin"> LinkedIn + </a>
                   </div>
                   <!-- /form card login -->
 
