--- a/events/src/app/featured-venues/featured-venues.component.html
+++ b/events/src/app/featured-venues/featured-venues.component.html
@@ -2,9 +2,9 @@
     <div class="col-6"><h2 class="featuredVenuesTitle">Featured venues</h2></div>
     <div class="col-6"><span class="seeMore">see all venues ></span></div>
 </div> 
-<div class="row" style="margin-bottom: 50px;">
-    <div class="col-4">
-            <div class="card" style="width: 20rem;">
+<div class="row justify-content-center " style="margin-bottom: 50px;">
+    <div class="col-sm-12 col-lg-4">
+            <div class="card" >
                     <div style="background-image: url('https://static1.squarespace.com/static/5639ae74e4b0938162bc0540/565c8c4ee4b0f33a7ae9ac84/565c8c4fe4b0f33a7ae9ac88/1448906304945/WineRoom01.jpg?format=750w');
                     background-position: center;
                     background-repeat: no-repeat;
@@ -15,8 +15,8 @@
                     </div>
             </div>
     </div>
-    <div class="col-4">
-            <div class="card" style="width: 20rem;">
+    <div class="col-sm-12 col-lg-4">
+            <div class="card" >
                     <div style="background-image: url('http://ovationsrestaurant.com/sites/sow/files/gallery/DSC_0025.jpg');
                     background-position: center;
                     background-repeat: no-repeat;
@@ -27,8 +27,8 @@
                     </div>
                   </div>
     </div>
-    <div class="col-4">
-            <div class="card" style="width: 20rem;">
+    <div class="col-sm-12 col-lg-4">
+            <div class="card" >
                     <div style="background-image: url('https://resizer.otstatic.com/v2/photos/large/25113824.jpg');
                     background-position: center;
                     background-repeat: no-repeat;
