--- a/events/src/app/featured-venues/featured-venues.component.css
+++ b/events/src/app/featured-venues/featured-venues.component.css
@@ -19,3 +19,18 @@
     margin-top: 3.25rem;
     margin-bottom: 1.875rem;
 }
+.card {
+    width: 20rem;
+}
+
+
+@media only screen and (max-width: 478px) {
+    .feature_header {
+        margin-top: 500px;
+       
+    }
+    .card {
+        width: 20rem;
+        margin: 10px;
+    }
+ }
