--- a/events/src/app/search-panel/search-panel.component.html
+++ b/events/src/app/search-panel/search-panel.component.html
@@ -1,24 +1,34 @@
-<div style="margin-top: 50px" class="row">
-    <div class="col-4">
-        <input matInput class="header_button" [matDatepicker]="picker" placeholder="Choose a date">
-        <mat-datepicker-toggle style="color:white;" matSuffix [for]="picker"></mat-datepicker-toggle>
-        <mat-datepicker #picker></mat-datepicker> 
+<div class="search_panel_container row ">
+    <div class="col-sm-6 col-md-6  col-lg-4">
+        <div class="search_item">
+                <input matInput class="header_button" [matDatepicker]="picker" placeholder="Choose a date">
+                <mat-datepicker-toggle  class="picker"   style="color:white;" matSuffix [for]="picker"></mat-datepicker-toggle>
+                <mat-datepicker #picker></mat-datepicker>
+
+        </div>
     </div>
-    <div class="col-3">
-        <button mat-button class="header_button" [matMenuTriggerFor]="menu">Guests</button>
-        <mat-menu #menu="matMenu">
-          <button mat-menu-item>Item 1</button>
-          <button mat-menu-item>Item 2</button>
-        </mat-menu>
+    <div class="col-sm-6 col-md-6 col-lg-3">
+        <div class="search_item" >
+                <button class="header_button" mat-button [matMenuTriggerFor]="menu">Guests</button>
+                <mat-menu #menu="matMenu">
+                  <button mat-menu-item>Item 1</button>
+                  <button mat-menu-item>Item 2</button>
+                </mat-menu>
+        </div>
     </div>
-    <div class="col-3">
-            <button mat-button  class="header_button" [matMenuTriggerFor]="menu">Location</button>
-            <mat-menu #menu="matMenu">
-              <button mat-menu-item>Item 1</button>
-              <button mat-menu-item>Item 2</button>
-            </mat-menu>
+    <div class="col-sm-6 col-md-6 col-lg-3">
+        <div class="search_item">
+                <button mat-button  class="header_button" [matMenuTriggerFor]="menu">Location</button>
+                <mat-menu #menu="matMenu">
+                  <button mat-menu-item>Item 1</button>
+                  <button mat-menu-item>Item 2</button>
+                </mat-menu>
+        </div>
+           
     </div>
-    <div class="col-2">
-            <button mat-button  class="header_search" >Search</button>
+    <div class="col-sm-6 col-md-6 col-lg-2">
+            <div class="search_item">
+                <button mat-button  class="header_search" >Search</button>
+            </div>
     </div>
 </div>
