--- a/events/src/app/login/login.component.css
+++ b/events/src/app/login/login.component.css
@@ -1,6 +1,29 @@
+.social_container {
+    display:flex;
+    margin-bottom: 20px;
+    
+}
+.social_title {
+    font-family: Avenir;
+    padding-left: 20px;
+    margin-bottom: 20px;
+}
+
 .google_login {
-    width: 60%;
-    height: 40px;
+
     margin: auto;
     margin-bottom: 20px;
+}
+
+.login_container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+.facebook {
+    background-image: url("/assest/fblogin.png");
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    height: 50px;
 }
