added form authentication/password

--- a/events/src/app/login/login.component.html
+++ b/events/src/app/login/login.component.html
@@ -30,7 +30,7 @@
                               </div>
                               <div style="display:flex;"> <div style="padding-top:10px; font-family: Avenir">need an account?</div> <div><a class="nav-link navItem" routerLink ="/register" >Sign up</a></div> </div>
                               
-                              <button type="button" class="btn btn-success btn-lg float-right">Login</button>
+                             <a href="/auth/login"><button type="button" class="btn btn-success btn-lg float-right">Login</button></a>
                           </form>
                           
                     </div>
