--- a/events/src/app/register/user-type/personal/personal.component.html
+++ b/events/src/app/register/user-type/personal/personal.component.html
@@ -1,44 +1,61 @@
 <div  class="bg-dark">
     <div class="container form_container">
-        <form class="personal_form">
-            <div class="form-group">
-              <label for="formGroupExampleInput">First Name</label>
-              <input type="text" class="form-control" id="formGroupExampleInput" placeholder="Parker">
-            </div>
-            <div class="form-group">
-              <label for="formGroupExampleInput2">Last Name</label>
-              <input type="text" class="form-control" id="formGroupExampleInput2" placeholder="Martinez">
-            </div>
-            <div class="form-group">
-                <label for="formGroupExampleInput2">Street</label>
-                <input type="text" class="form-control" id="formGroupExampleInput2" placeholder="12 Mackenzie rd">
-            </div>
-            <div class="form-group">
-                <label for="formGroupExampleInput2">City</label>
-                <input type="text" class="form-control" id="formGroupExampleInput2" placeholder="Morristown">
-            </div>
-            <div class="form-group">
-                <label for="formGroupExampleInput2">Zip</label>
-                <input type="text" class="form-control" id="formGroupExampleInput2" placeholder="07981">
-            </div>
-            <div class="form-group">
-                <label for="formGroupExampleInput2">Mobile</label>
-                <input type="text" class="form-control" id="formGroupExampleInput2" placeholder="12 Mackenzie rd">
-            </div>
-            <div class="form-group">
-                <label for="formGroupExampleInput2">Email</label>
-                <input type="text" class="form-control" id="formGroupExampleInput2" placeholder="dan@parker.com">
-            </div>
-            <div class="form-group">
-                <label for="formGroupExampleInput2">Password</label>
-                <input type="text" class="form-control" id="formGroupExampleInput2" placeholder="dan@parker.com">
-            </div>
-            <div class="form-group">
-                <label for="formGroupExampleInput2">Re-enter Password</label>
-                <input type="text" class="form-control" id="formGroupExampleInput2" placeholder="dan@parker.com">
-            </div>
-            <button>Submit</button>
-          </form>
-              
+       <form #f="ngForm" (ngSubmit) = "submit(f)">
+           <div class="form-group">
+                <label for="firstName">First Name</label>
+                <input [(ngModel)] ="user.firstName" required name="firstName" #firstName ="ngModel" (change)="log(firstName)" id="firstName" type="text" class="form-control">
+                <div class="alert alert-danger" *ngIf="firstName.touched && !firstName.valid">First Name is Required</div>
+           </div>
+           <div class="form-group">
+                <label for="lastName">Last Name</label>
+                <input [(ngModel)] ="user.lastName" required name="lastName" #lastName ="ngModel" (change)="log(firstName)" id="lastName" type="text" class="form-control">
+                <div class="alert alert-danger" *ngIf="lastName.touched && !lastName.valid">Last Name is Required</div>
+           </div>
+           <div class="form-group">
+                <label for="streetAddress">Street Address</label>
+                <input [(ngModel)]="user.streetAddress" required name="streetAddress" #streetAddress ="ngModel"  id="streetAddress" type="text" class="form-control">
+                <div class="alert alert-danger" *ngIf="streetAddress.touched && !streetAddress.valid">Street Address is Required</div>
+           </div>
+           <div class="form-group">
+                <label for="state">State</label>
+                <input [(ngModel)] ="user.state" required name="state" #state ="ngModel"  id="state" type="text" class="form-control">
+                <div class="alert alert-danger" *ngIf="state.touched && !state.valid">State Address is Required</div>
+           </div>
+           <div class="form-group">
+                <label for="zip">Zip Code</label>
+                <input [(ngModel)] = "user.zipcode" required name="zip" #zip ="ngModel"  id="zip" type="text" class="form-control">
+                <div class="alert alert-danger" *ngIf="zip.touched && !zip.valid">Zip Code is Required</div>
+           </div>
+           <div class="form-group">
+                <label for="email">Email</label>
+                <input [(ngModel)] = "user.email" required  name="email" #email ="ngModel"  id="email" type="email" class="form-control">
+                <div class="alert alert-danger" *ngIf="email.touched && !email.valid">
+                        <div *ngIf="email.errors.required">Email is required and format should be <i>john@doe.com</i> </div>
+                </div>
+           </div>
+           <div class="form-group">
+                <label for="password">Password</label>
+                <input [(ngModel)] ="user.password" required minlength = "6" maxlength = "20" name="password" #password ="ngModel"  id="password" type="password" class="form-control">
+                <div class="alert alert-danger" *ngIf="password.touched && !password.valid">
+                    <div *ngIf="password.errors.required">Password is required </div>
+                    <div *ngIf="password.errors.minlength"> Password should be minimum 6 characters </div>
+                    <div *ngIf="password.errors.maxlength"> Password should be minimum 6 characters </div>
+                </div>
+           </div>
+           <div class="form-group">
+                <label for="passwordConfirm">Confirm Password</label>
+                <input [(ngModel)] = "user.confirmPassword" required  minlength = "6" maxlength = "20" name="passwordConfirm" #passwordConfirm ="ngModel"  id="passwordConfirm" type="password" class="form-control">
+                <div class="alert alert-danger" *ngIf="passwordConfirm.touched && !passwordConfirm.valid">
+                    <div *ngIf="passwordConfirm.errors.required">Password is required </div>
+                    <div *ngIf="passwordConfirm.errors.minlength"> Password should be minimum 6 characters </div>
+                    <div *ngIf="passwordConfirm.errors.maxlength"> Password should be minimum 6 characters </div>
+                    <div *ngIf="isNotMatch()">Passwords do not match</div>
+                </div>
+                
+           </div>
+
+
+            <button class="btn btn-primary">Submit</button>          
+       </form>
     </div> 
 </div>
