--- a/events/src/app/register/user-type/user-type.component.html
+++ b/events/src/app/register/user-type/user-type.component.html
@@ -6,7 +6,7 @@
             Personal
           </li>
           <li class="list-group-item">Corporate</li>
-          <li class="list-group-item">Venue</li>
+          <li class="list-group-item" routerLink ="/register/venue">Venue</li>
         </ul>
   </div>
 </div>
