added auth to venue - fixed branching issue

--- a/events/src/app/nav-bar/nav-bar.component.html
+++ b/events/src/app/nav-bar/nav-bar.component.html
@@ -24,7 +24,7 @@
       </ng-template>
     
       <li class="nav-item" *ngIf="!isLogged.auth; else logout">
-        <a class="nav-link navItem" routerLink ="/login" >LOG IN</a>
+        <a class="nav-link navItem" routerLink ="/userType" >LOG IN</a>
       </li>
       <li class="nav-item">
           <a class="nav-link navItem" href="#">LIST YOUR VENUE</a>
