--- a/events/src/app/register/user-type/user-type.component.html
+++ b/events/src/app/register/user-type/user-type.component.html
@@ -2,11 +2,11 @@
   <div class="container user_type_container">
         <label>How will you be using Sit, Parker ? </label> 
        <ul class="list-group user_type">
-          <li class="list-group-item disabled" routerLink ="/register/personal">       
+          <li class="list-group-item disabled" routerLink ="/login">       
             Personal
           </li>
           <li class="list-group-item">Corporate</li>
-          <li class="list-group-item" routerLink ="/register/venue">Venue</li>
+          <li class="list-group-item" routerLink ="/venue/login">Venue</li>
         </ul>
   </div>
 </div>
