--- a/events/src/app/login/login.component.html
+++ b/events/src/app/login/login.component.html
@@ -20,6 +20,8 @@
                                   <label for="password">Password</label>
                                   <input [(ngModel)]="loginInfo.password" name="password" #password="ngModel" type="password" class="form-control form-control-lg rounded-0" id="password" required autocomplete="new-password">
                               </div>
+                              <div  class="alert alert-danger" *ngIf="loginFailed"> Wrong Username or Password</div>  
+                              
                               <div>
                                   <label class="custom-control custom-checkbox">
                                     <input type="checkbox" class="custom-control-input">
@@ -27,9 +29,9 @@
                                     <span class="custom-control-description small">Remember me on this computer</span>
                                   </label>
                               </div>
-                              <div style="display:flex;"> <div style="padding-top:10px; font-family: Avenir">need an account?</div> <div><a class="nav-link navItem" routerLink ="/register" >Sign up</a></div> </div>
+                              <div style="display:flex;"> <div style="padding-top:10px; font-family: Avenir">need an account?</div> <div><a class="nav-link navItem" routerLink ="/register/personal" >Sign up</a></div> </div>
                               
-                             <button (click)="login()" type="button" class="btn btn-lg float-right local_login_button">Login</button>
+                             <button (click)="login()" type="button" class="float-right local_login_button">Login</button>
                           </form>
                           
                     </div>
