--- a/events/src/app/search-panel/search-panel.component.html
+++ b/events/src/app/search-panel/search-panel.component.html
@@ -13,7 +13,7 @@
     <div class="col-sm-6 col-md-6 col-lg-3">
        
         <div class="search_item">
-                <input matInput style="margin-right:0; font-family:Avenir; text-align: center;" class="header_button" [matDatepicker]="picker" placeholder="Choose a date">
+                <input matInput style="margin-right:0; font-family:Avenir; text-align: center;" class="header_button" (dateInput)="addEvent('input', $event)" (dateChange)="addEvent('change', $event)" [matDatepicker]="picker" placeholder="Choose a date">
                 <mat-datepicker-toggle  class="picker"   style="color:white;" matSuffix [for]="picker"></mat-datepicker-toggle>
                 <mat-datepicker #picker></mat-datepicker>
 
@@ -23,13 +23,13 @@
        
         <div class="search_item" >
                 <!-- <button class="header_button" mat-button [matMenuTriggerFor]="menu">Guests</button> -->
-                <input matInput class="header_button" placeholder="Guest">
+                <input matInput [(ngModel)]="numberOfGuest" class="header_button" placeholder="Guest">
         </div>
            
     </div>
     <div class="col-sm-6 col-md-6 col-lg-3">
             <div class="search_item">
-                <button mat-button  class="header_search" >Search</button>
+                <button mat-button (click)="submitSearch()" class="header_search" >Search</button>
             </div>
     </div>
 </div>
