--- a/events/src/app/register/user-type/user-type.component.html
+++ b/events/src/app/register/user-type/user-type.component.html
@@ -2,10 +2,11 @@
   <div class="container user_type_container">
         <label>How will you be using Sit, Parker ? </label> 
        <ul class="list-group user_type">
-          <li class="list-group-item disabled" routerLink ="/login">       
+          <li class="list-group-item" routerLink ="/login">       
             Personal
           </li>
-          <li class="list-group-item">Corporate</li>
+          <!-- To be added later -->
+          <!-- <li class="list-group-item">Corporate</li> -->
           <li class="list-group-item" routerLink ="/venue/login">Venue</li>
         </ul>
   </div>
