--- a/events/src/app/nav-bar/nav-bar.component.html
+++ b/events/src/app/nav-bar/nav-bar.component.html
@@ -19,7 +19,7 @@
       </li>
       <ng-template #logout>
         <li>
-          <a class="nav-link navItem" href="/auth/logout" >LOG OUT</a>
+          <button class="nav-link navItem" (click)="logOut()" >LOG OUT</button>
         </li>
       </ng-template>
     
