--- a/events/src/app/venuecard/venuecard.component.html
+++ b/events/src/app/venuecard/venuecard.component.html
@@ -1,9 +1,8 @@
-<!-- <div class="col-sm-12 col-lg-4">
+
     <div class="card" >
-            <div [style.backgroundImage]="'url('/assets/' + venueInfo.image + ')'" ></div>
+            <div class="venueImage" [style.backgroundImage]="'url(http://localhost:3000/public/images/' + venueInfo.image + ')'" ></div>
             <div class="card-body">
               <p>{{venueInfo.image}}</p>
               <p class="card-text">Whether you’re in search of a private space for a business function, family event, or just a special dinner out with friends, Fiorino has the right solution for your private dining needs.</p>
             </div>
     </div>
-</div> -->
