start customer dash

--- a/events/src/app/nav-bar/nav-bar.component.html
+++ b/events/src/app/nav-bar/nav-bar.component.html
@@ -19,7 +19,7 @@
       </li>
       <ng-template #logout>
         <li>
-          <button class="nav-link navItem" (click)="logOut()" >LOG OUT</button>
+          <button style="border-color:white;" class="nav-link navItem" (click)="logOut()" >LOG OUT</button>
         </li>
       </ng-template>
     
