--- a/events/src/app/customer-dashboard/customer-dashboard.component.html
+++ b/events/src/app/customer-dashboard/customer-dashboard.component.html
@@ -1,3 +1,5 @@
-<p>
-  customer-dashboard works!
-</p>
+<div class="container">
+
+  <app-customer-dash-search></app-customer-dash-search>
+
+</div>
