--- a/events/src/app/search-panel/search-panel.component.html
+++ b/events/src/app/search-panel/search-panel.component.html
@@ -12,18 +12,22 @@
     </div>
     <div class="col-sm-6 col-md-6 col-lg-3">
        
-        <div class="search_item">
-                <input matInput style="margin-right:0; font-family:Avenir; text-align: center;" class="header_button" (dateInput)="addEvent('input', $event)" (dateChange)="addEvent('change', $event)" [matDatepicker]="picker" placeholder="Choose a date">
-                <mat-datepicker-toggle  class="picker"   style="color:white;" matSuffix [for]="picker"></mat-datepicker-toggle>
-                <mat-datepicker #picker></mat-datepicker>
+        <div class="search_item" style="background-color:white; height: 52px">
+                <mat-form-field>
+                        <input matInput style="margin-right:0; font-family:Avenir; text-align: center;" class="" (dateInput)="addEvent('input', $event)" (dateChange)="addEvent('change', $event)" [matDatepicker]="picker" placeholder="Choose a date">
+                        <mat-datepicker-toggle  class="picker"   style="color:black;" matSuffix [for]="picker"></mat-datepicker-toggle>
+                        <mat-datepicker #picker></mat-datepicker>
+                </mat-form-field>
 
         </div>
     </div>
     <div class="col-sm-6 col-md-6 col-lg-3">
        
-        <div class="search_item" >
+        <div class="search_item" style="background-color:white; height: 52px" >
                 <!-- <button class="header_button" mat-button [matMenuTriggerFor]="menu">Guests</button> -->
-                <input matInput [(ngModel)]="numberOfGuest" class="header_button" placeholder="Guest">
+                <mat-form-field>
+                        <input matInput [(ngModel)]="numberOfGuest"  placeholder="Guest">
+                </mat-form-field>
         </div>
            
     </div>
